--- a/app/src/blog/templates/blog/includes/blog_header.html
+++ b/app/src/blog/templates/blog/includes/blog_header.html
@@ -4,7 +4,7 @@
 	<div class="grid-x grid-padding-x align-center">
 		<div class="medium-9 cell">
 	  		<div class="neat-article-title">
-	    		<h3 class="article-title">{{ self.title }}</h3>
+	    		<h3 class="article-title">{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3>
 	  		</div>
 	  		<div class="neat-article-header">
 	    		<div class="article-header-author">
