--- a/app/src/board/templates/board/board_page.html
+++ b/app/src/board/templates/board/board_page.html
@@ -4,11 +4,20 @@
 
 {% block body_class %}template-boardindexpage{% endblock %}
 
+{% block header %}
+  {{ page.title }}
+{% endblock %}
+
+
 {% block content %}
-    <h1>{{ page.title }}</h1>
-
-    <div class="intro">{{ page.description|richtext }}</div>
-
-    {% include_block page.body %}
-
+  <div id="content" class="grid-container">
+    <div class="grid-x grid-padding-x">
+        <div class="intro cell">
+          {{ page.description|richtext }}
+        </div>
+        <div class="cell">
+          {% include_block page.body %}
+        </div>
+      </div>
+  </div>
 {% endblock %}
