--- a/app/src/events/templates/events/event_page.html
+++ b/app/src/events/templates/events/event_page.html
@@ -13,27 +13,27 @@
     	      	</div>
     	      	<div class="medium-5 cell">
     	        	<br>
-    	        	<h4><strong>{{ self.title }}</strong></h4>
-    	
+    	        	<h4><strong>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</strong></h4>
+
     	        	<p>Date: <strong>{{ self.date_from|date:"j F Y" }}</strong>
     	          		{% if self.date_to %}
     	          			- <strong>{{ self.date_to|date:"j F Y" }}</strong>
     	          		{% endif %}
     	        	</p>
-    	
+
 	    	        <p>
 	    	          {% if self.time_from %}
 	    	          Time: <strong>{{ self.time_from|time_display }}</strong>
 	    	          {% endif %}
-	    	
+
 	    	          {% if self.time_to %}
 	    	          - <strong>{{ self.time_to|time_display }}</strong>
 	    	          {% endif %}
 	    	        </p>
-    	
+
     	        	{% if self.location %}
     	        		<p class="hide-for-small-only">Location: <strong><a href="http://maps.google.com/?q={{ self.location }}" target="_blank">{{ self.location }}</a></strong></p>
-    	        
+
     	        		<div class="show-for-small-only">
     	        			<p>Location: <strong>{{ self.location }}</strong></p>
 		    	        	<div class="grid-x grid-padding-x">
@@ -46,19 +46,19 @@
 		    	            </div>
     	        		</div>
     	        	{% endif %}
-    	
+
     	        	{% if self.cost %}
     	        		<p>Cost: <strong>{{ self.cost|safe }}</strong></p>
     	        	{% endif %}
-    	
+
     	        	{% if self.audience %}
     	        		<p>Audience: <strong>{{ self.get_audience_display }}</strong></p>
     	        	{% endif %}
-    	
+
     	        	{% if self.signup_link %}
     	        		<p>Sign up: <a href="{{ self.signup_link }}">{{ self.signup_link }}</a></p>
     	        	{% endif %}
-    	
+
     	        	<p class="add" style="margin-bottom: 0;"><a id="calendar" class='button tiny radius' style="border-radius: 3px;" href= "{{ self.url }}?format=ical"><i class="fa fa-plus-square"></i>&nbsp;&nbsp;Add to calendar</a></p>
     	      	</div>
     	 	</div>
