--- a/app/src/events/templates/events/includes/event_list_item.html
+++ b/app/src/events/templates/events/includes/event_list_item.html
@@ -1,24 +1,21 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<div id="event_grid" class="cell">
-	<a href="{% pageurl event %}">
-    	<div class="card" data-equalizer-watch>
-      		{% if event.feed_image %}
-      			{% image event.feed_image fill-1200x600 %}
-      		{% endif %}
+	<a class="event-link" href="{% pageurl event %}">
+		<div class="event">
+			{% if event.feed_image %}
+				{% image event.feed_image width-600 as event_image %}
+				<div class="event-image" style="background-image:url('{{event_image.url}}')"></div>
+			{% endif %}
 
-      		<div class="card-section">
-        		<li>
-        			<i class="fab fa-clock-o" aria-hidden="true"></i> 
-        			{{ event.date_from|date:"j F" }} {% if event.time_from %}- {{ event.time_from }}{% endif %}
-        		</li>
+			<div class="event-summary">
+				<h4>{{ event.title }}</h4>
 
-        		<h6>{{ event.title }}</h6>
+				<i class="fab fa-clock-o" aria-hidden="true"></i>
+				{{ event.date_from|date:"j F" }} {% if event.time_from %}- {{ event.time_from }}{% endif %}
 
-        		{% if event.location %}
-        			<li><i class="fa fa-map-marker" aria-hidden="true"></i> {{ event.location }}</li>
-        		{% endif %}
-      		</div>
-    	</div>
-  	</a>
-</div>
+				{% if event.location %}
+				<i class="fa fa-map-marker" aria-hidden="true"></i> {{ event.location }}
+				{% endif %}
+			</div>
+		</div>
+	</a>
