--- a/app/src/gallery/templates/gallery/gallery_index.html
+++ b/app/src/gallery/templates/gallery/gallery_index.html
@@ -2,7 +2,7 @@
 {% load static wagtailcore_tags wagtailimages_tags gallery_tags %}
 
 {% block header %}
-  {{ self.title }}
+{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
 {% endblock %}
 
 
@@ -14,9 +14,9 @@
 		      		{{ self.intro|richtext }}
 		    	</center>
 		    </div>
-		    
+
 		    {% include 'gallery/gallery.html' %}
-		    
+
 		    <div class="medium-12 cell">
 		    	{% if gallery_images.has_other_pages %}
 	    			<div class="medium-12 cell hide-for-print">
@@ -28,9 +28,9 @@
 	    	  			{% else %}
 	    						<li class="pagination-previous disabled">Previous</li>
 	    					{% endif %}
-	    					
+
 	    					<li class="unavailable">Page {{ gallery_images.number }} of {{ gallery_images.paginator.num_pages }}</li>
-	    	
+
 	    					{% if gallery_images.has_next %}
 	    						<li class="pagination-next">
 	    	  					<a href="?page={{ gallery_images.next_page_number }}{% for key,value in request.GET.items %}{% ifnotequal key 'page' %}&amp;{{ key }}={{ value }}{% endifnotequal %}{% endfor %}" aria-label="Next page">Next</a>
