--- a/app/src/membership/templates/membership/membership_index.html
+++ b/app/src/membership/templates/membership/membership_index.html
@@ -6,7 +6,7 @@
 {% block header %}
   {% if self.feed_image %}
   {% else %}
-      {{ self.title }}
+  {% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
   {% endif %}
 {% endblock %}
 
