--- a/app/src/pages/static/css/_settings.scss
+++ b/app/src/pages/static/css/_settings.scss
@@ -76,7 +76,9 @@ $green-light: #6ac07a;
 $gray-dark: #373d4a;
 $gray-light: #727d83;
 $cream: #FFFDF3;
-
+$off-white : #F8F8FA;
+$emperor: #777777;
+$dark-metal: #222222;
 
 // 1. Global
 // ---------
@@ -437,8 +439,8 @@ $input-prefix-color: $black;
 $input-prefix-background: $light-gray;
 $input-prefix-border: 1px solid $medium-gray;
 $input-prefix-padding: 1rem;
-$form-label-color: $black;
-$form-label-font-size: rem-calc(14);
+$form-label-color: $blue-dark;
+$form-label-font-size: rem-calc(18);
 $form-label-font-weight: $global-weight-normal;
 $form-label-line-height: 1.8;
 $select-background: $white;
@@ -453,11 +455,11 @@ $input-line-height: $global-lineheight;
 $input-background: $white;
 $input-background-focus: $white;
 $input-background-disabled: $light-gray;
-$input-border: 1px solid $medium-gray;
-$input-border-focus: 1px solid $dark-gray;
+$input-border: 1px solid $light-gray;
+$input-border-focus: 1px solid $yellow-dark;
 $input-padding: $form-spacing / 2;
-$input-shadow: inset 0 1px 2px rgba($black, 0.1);
-$input-shadow-focus: 0 0 5px $medium-gray;
+$input-shadow: none;
+$input-shadow-focus: none;
 $input-cursor-disabled: not-allowed;
 $input-transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 $input-number-spinners: true;
