--- a/app/src/pages/static/css/app.scss
+++ b/app/src/pages/static/css/app.scss
@@ -6,7 +6,11 @@
 @import 'css/building-blocks';
 @import 'css/print';
 @import './buttons';
+
 @import './home_page';
+@import './contact-page';
+@import './products';
+@import './events-index';
 @import './footer';
 
 @include foundation-global-styles;
@@ -51,13 +55,14 @@
 @include foundation-flex-classes;
 // @include foundation-prototype-classes;
 
+// snipcart
+div.snip-layout {
+	z-index: 20000;
+}
 
 $primary: map-get($foundation-palette, primary);
 $secondary: map-get($foundation-palette, secondary);
 $secondary-foreground: map-get($foundation-palette, secondary);
-$off-white : #F8F8FA;
-$emperor: #777777;
-$dark-metal: #222222;
 $static: static;
 
 // Responsive image/video classes
@@ -128,7 +133,7 @@ hr {border-color: $light-gray;}
             font-size: 28px;
             color: $yellow-dark;
             img {
-              margin-right: 10px;
+              margin-right: 18px;
               flex-shrink: 0;
             }
           }
@@ -434,13 +439,6 @@ header + #content {
   input.button{border-top-right-radius: 5px; border-bottom-right-radius: 5px;color: $white;padding-top: 11px;}
 }
 
-
-.contact-form {
-  [type="text"], [type="password"], [type="date"], [type="datetime"], [type="datetime-local"], [type="month"], [type="week"], [type="email"], [type="number"], [type="search"], [type="tel"], [type="time"], [type="url"], [type="color"], textarea {border-radius: 4px;}
-
-  textarea {max-height: 60px;}
-}
-
 .vcard {
   border: 0px;
   padding: 0;
@@ -487,4 +485,15 @@ select {
   // make dropdowns look better.  Not all browsers support Foundation's `appearance: none`
   -webkit-appearance: none;
   -moz-appearance: none;
+}
+
+
+.home-announcement {
+  background-color: $red-dark;
+  color: $white;
+  h3 {
+    color: $white;
+    padding-top: 10px;
+    margin-bottom: -15px;
+  }
 }
