--- a/app/src/pages/templates/pages/award_index_page.html
+++ b/app/src/pages/templates/pages/award_index_page.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
-{% load wagtailimages_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block header %}
-  {{ page.title }}
+{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
 {% endblock %}
 
 {% block content %}
