--- a/app/src/pages/templates/pages/faqs_page.html
+++ b/app/src/pages/templates/pages/faqs_page.html
@@ -6,7 +6,7 @@
 		<div class="grid-x grid-padding-x align-center">
 			<div id="faq" class="medium-8 cell">
 	    		<center>
-	        		<h3>{{ self.title }}</h3>
+	        		<h3>{% if self.subtitle %} {{ self.subtitle }} {% else %}{{ self.title }} {% endif %}</h3>
 	    		</center>
 	    		<hr>
 	    		{{ self.body }}
