--- a/app/src/pages/templates/pages/testimonial_page.html
+++ b/app/src/pages/templates/pages/testimonial_page.html
@@ -7,9 +7,9 @@
     <div id="content" class="grid-container">
     	<div id="testimonial_list" class="grid-x grid-padding-x">
     		<div class="medium-12 cell">
-            	<center><h3>{{ self.title }}</h3></center>
+            	<center><h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3></center>
             </div>
-            
+
             <div class="featured-testimonials-section">
                 <div class="featured-testimonials row" data-equalizer>
                     {% testimonials_list %}
