--- a/app/src/pages/templates/pages/video_gallery_page.html
+++ b/app/src/pages/templates/pages/video_gallery_page.html
@@ -2,7 +2,7 @@
 {% load static wagtailcore_tags navigation_tags wagtailimages_tags wagtailembeds_tags grhs_site_utils %}
 
 {% block header %}
-  {{ self.title }}
+{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}
 {% endblock %}
 
 
