--- a/app/src/utils/templates/utils/includes/facebook_opengraph.html
+++ b/app/src/utils/templates/utils/includes/facebook_opengraph.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
-<meta property="og:title" content="{% if self.seo_title %}{{ self.seo_title }}{% else %}{{ self.title }}{% endif %}"/>
+<meta property="og:title" content="{% if self.seo_title %}{{ self.seo_title }}{% else %}{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}{% endif %}"/>
 <meta property="og:url" content="{{ request.build_absolute_uri }}" />
 <meta property="og:site_name" content="{{ request.site.site_name }}" />
 <meta property="og:description" content="{% if self.search_description %}{{ self.search_description }}{% endif %}"/>
