--- a/app/src/utils/templates/utils/tags/navigation/top_menu.html
+++ b/app/src/utils/templates/utils/tags/navigation/top_menu.html
@@ -21,10 +21,11 @@
         </div>
         <div class="top-bar-right">
             <ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
-                <li class="{% if calling_page.url == site_root %} is-active{% endif %}"><a href="{% pageurl site_root %}">Home</a></li>
+              {# <li class="{% if calling_page.url == site_root %} is-active{% endif %}"><a href="{% pageurl site_root %}">Home</a></li> #}
                 {% for menuitem in menuitems %}
                     <li class="{% if menuitem.show_dropdown %}has-submenu{% endif %} {% if calling_page.url == menuitem.url %}is-active{% endif %}">
                         <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
+                        {% comment %}
                             {% if menuitem.show_dropdown %}
                                 <ul class="submenu menu vertical" data-submenu>
                                     <li class="show-for-small-only">
@@ -33,6 +34,7 @@
                                     {% top_menu_children parent=menuitem %}
                                 </ul>
                             {% endif %}
+                        {% endcomment %}
                     </li>
                 {% endfor %}
                 <li class="snipcart-summary">
