Use "product" namespace for products

--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -9,7 +9,8 @@
 
 @import './home_page';
 @import './contact-page';
-@import './products';
+@import './product-show';
+@import './product-index';
 @import './events-index';
 @import './footer';
 
