--- a/products/templates/products/payment.html
+++ b/products/templates/products/payment.html
@@ -9,7 +9,7 @@
 {% block content %}
     <div id="content" class="grid-container">
         <div class="grid-x grid-padding-x align-center">
-            <div id="people" class="medium-10 cell">
+            <div id="products" class="medium-10 cell">
                 <p>Please wait while you are redirected PayPal for payment.</p>
                 <div style="display:none;">
                     <form action="https://{{ settings.products.PaypalSettings.url }}/cgi-bin/webscr" method="post" id="payment_form">
