--- a/products/templates/products/error.html
+++ b/products/templates/products/error.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div id="content" class="grid-container">
         <div class="grid-x grid-padding-x align-center">
-            <div id="people" class="medium-10 cell">
+            <div id="products" class="medium-10 cell">
                 <h2>Error</h2>
                 <p>
                     There was an error processing you request.
