--- a/products/templates/products/paypal.html
+++ b/products/templates/products/paypal.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div id="content" class="grid-container">
         <div class="grid-x grid-padding-x align-center">
-            <div id="people" class="medium-10 cell">
+            <div id="products" class="medium-10 cell">
                 Thank you for your payment. Your transaction has been completed, and a receipt for your purchase has been emailed to you. Log into your PayPal account to view transaction details.
             </div>
         </div>
