--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -21,22 +21,30 @@
 
             {% if self.price %}</div>{% else %}</div>{% endif %}
 
-            {% if self.price %}
+            {% if self.price and self.inventory > 0 %}
                 <div class="medium-2 columns" style="border:solid 1px;height:240px;text-align:center;">
                     <h5>Price</h5><br><br>
                     <h1 class="stat"><strong>{{ self.price }}</strong></h1>
+                    {% if self.shipping_cost > 0.0 %}
+                        <span class="shipping">+ {{ self.shipping_cost }} shipping</span>
+                    {% endif %}
                     <form action="https://{{ settings.products.PaypalSettings.url }}/cgi-bin/webscr" method="post" id="payment_form">
-                        <input type="hidden" name="cmd" value="_xclick">
-                        <input type="hidden" name="amount" value="{{ page.price }}">
+                        <input type="hidden" name="cmd" value="_cart">
+                        <input type="hidden" name="add" value="1">
+                        <input type="hidden" name="amount" value="{{ page.cost }}">
                         <input type="hidden" name="business" id="business" value="{{ settings.products.PaypalSettings.email }}"/>
                         <input type="hidden" name="item_name" value="{{ page.title }}">
                         <input type="hidden" name="return" value="{{ request.site.root_url }}/paypal"/>
                         <input type="hidden" name="cancel_return" value="{{ request.site.root_url }}/paypal/cancel"/>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="hidden" name="lc" value="US">
-                        <input type="image" name="submit" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" alt="Buy Now">
+                        <input type="image" name="submit" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" alt="Add to Cart">
                         <img alt="" border="0" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
                     </form>
+                </div>
+            {% else %}
+                <div class="medium-2 columns" style="text-align:center;">
+                    <h5>Out of Stock</h5><br><br>
                 </div>
             {% endif %}
         </div>
