Harcode titles for a few pages where title/seo_title wasn't coming through.  Fixes #93

--- a/membership/templates/membership/membership_base.html
+++ b/membership/templates/membership/membership_base.html
@@ -3,6 +3,8 @@
 
 {% block breadcrumbs %}{% endblock %}
 
+{% block title %}Join - Membership - Grand Rapids Historical Society{% endblock %}
+
 {% block header %}
   {% if self.feed_image %}
   {% else %}
