--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static wagtailcore_tags wagtailimages_tags wagtailimages_tags %}
 
+{% block title %}Search - Grand Rapids Historical Society{% endblock %}
+
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
