Update colors for facebook/twitter links.  Fixes #100

--- a/pages/static/css/_footer.scss
+++ b/pages/static/css/_footer.scss
@@ -39,11 +39,13 @@ $brand-twitter: #55acee;
   }
 
   .fa-facebook {
-    color: $brand-facebook;
     margin-right: 5px;
   }
-  .fa-twitter {
-    color: $brand-twitter;
+  .fa-facebook, .fa-twitter {
+    color: white;
+    &:hover {
+      color: $yellow-light;
+    }
   }
 
   input {
