Adds styling and layout for product page

--- a/products/templates/products/product_page.html
+++ b/products/templates/products/product_page.html
@@ -2,29 +2,40 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% block product_content %}
-    <div class="medium-12 columns">
+    <div class="product-show">
         <center>
             <h3>{% if self.subtitle %} {{ self.subtitle }}{% else %}{{ self.title }}{% endif %}</h3>
             <h5>{% include "products/includes/intro.html" with intro=self.intro only %}</h5>
         </center>
 
-        <div class="row" style="margin-bottom:15px;">
-            {% if self.price %}
-                <div class="medium-10 columns">
-            {% else %}
-                <div class="medium-12 columns">
-            {% endif %}
+        <div class="grid-x align-middle">
             {% if self.image %}
-                {% image self.image height-400 as photo %}
-                <img src="{{ photo.url }}" width="{{ photo.width }}" height="{{ photo.height }}" alt="{{ photo.alt }}" class="img-thumbnail" style="float: left;" />
+              <div class="reveal" id="product-image-modal" data-reveal>
+                <div class="product-image-modal-content">
+                  {% image self.image height-800 as fullSize %}
+                  <button class="close-button" data-close aria-label="Close modal" type="button">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  <img src="{{ fullSize.url }}"
+                       width="{{ fullSize.width }}"
+                       height="{{ fullSize.height }}"
+                       alt="{{ fullSize.alt }}"/>
+                </div>
+              </div>
+              <div class="medium-8 columns product-image">
+                {% image self.image height-400 as thumbnail %}
+                <img src="{{ thumbnail.url }}"
+                     width="{{ thumbnail.width }}"
+                     height="{{ thumbnail.height }}"
+                     alt="{{ thumbnail.alt }}"
+                     class="img-thumbnail"
+                     data-open="product-image-modal" />
+              </div>
             {% endif %}
 
-            {% if self.price %}</div>{% else %}</div>{% endif %}
-
             {% if self.price %}
-                <div class="medium-2 columns" style="border:solid 1px;height:240px;text-align:center;">
-                    <h5>Price</h5><br><br>
-                    <h1 class="stat"><strong>{{ self.price }}</strong></h1>
+                <div class="medium-4 columns buy-form">
+                    <h1 class="product-price"><strong>${{ self.price }}</strong></h1>
                     <form action="https://{{ settings.products.PaypalSettings.url }}/cgi-bin/webscr" method="post" id="payment_form">
                         <input type="hidden" name="cmd" value="_xclick">
                         <input type="hidden" name="amount" value="{{ page.price }}">
@@ -34,33 +45,17 @@
                         <input type="hidden" name="cancel_return" value="{{ request.site.root_url }}/paypal/cancel"/>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="hidden" name="lc" value="US">
-                        <input type="image" name="submit" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" alt="Buy Now">
-                        <img alt="" border="0" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+                        <input type="submit" name="submit" value="Add to Cart" class="button add-to-cart">
                     </form>
                 </div>
             {% endif %}
         </div>
     </div>
 
-    <br>
     <hr>
 
     <div class="medium-12 columns">
-        {% if self.link_demo %}
-            <center><a class="hollow button alert" href="{{self.link_demo}}">Demo</a></center>
-        {% endif %}
-    </div>
-
-    <div class="medium-12 columns">
-        <h5>Feature Tags</h5>
-        <ul>
-            {% for tag in self.tags.all %}
-                <li class="label" style="line-height:25px;"> {{ tag }}</li>
-            {% endfor %}
-        </ul>
-
         {% if self.description %}
-            <h5>Product Description</h5>
             {% include "products/includes/body.html" with body=self.description only %}
         {% endif %}
         <br>
