--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -3,7 +3,7 @@
 {% get_site_root as site_root %}
 
 <div class="hide-for-print" data-sticky-container>
-<div data-sticky data-options="marginTop:0;" style="width:100%;z-index:10000;">
+<div data-sticky data-options="marginTop:0;">
 
     <div class="title-bar" data-responsive-toggle="menu" data-hide-for="large">
         <div class="title-bar-title"><a href="{% pageurl site_root %}">Grand Rapids Historical Society</a></div>
