--- a/products/templates/products/product_base.html
+++ b/products/templates/products/product_base.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div id="content" class="grid-container">
         <div class="grid-x grid-padding-x align-center">
-            <div id="products" class="medium-10 cell">
+            <div id="products" class="small-12 medium-12 cell">
                 {% block product_content %}{% endblock %}
             </div>
         </div>
