--- a/pages/static/css/_product-index.scss
+++ b/pages/static/css/_product-index.scss
@@ -27,6 +27,7 @@ $card-padding: 1.5em;
 
 .card-product-actions {
   @include card-divider;
+  padding-top: 0;
   background: $card-product-bg;
   display: flex;
 }
@@ -65,6 +66,11 @@ $card-padding: 1.5em;
   padding: 20px;
 }
 
+.card-product-price {
+  font-weight: 600;
+  font-size: 1.25em;
+}
+
 .card-product-button {
   margin-bottom: 0;
   flex: 1 0 0;
@@ -81,3 +87,37 @@ $card-padding: 1.5em;
 }
 
 // END PRODUCT CARD
+
+.product-categories {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 1em;
+  margin-bottom: 1em;
+  border-bottom: 1px solid $yellow-dark;
+  @include breakpoint(medium) {
+    padding-bottom: 1em;
+  }
+  .category {
+    h4 {
+      margin-bottom: 0;
+    }
+    a.button {
+      text-decoration: none;
+      border-width: 1px;
+      padding: 0.5em;
+      @include breakpoint(medium) {
+        padding: 0.5em 2em;
+      }
+      &.active {
+        background: $blue-light;
+        color: $off-white;
+      }
+      &:hover {
+        color: $yellow-light;
+      }
+    }
+  }
+}
