--- a/pages/static/css/_product-show.scss
+++ b/pages/static/css/_product-show.scss
@@ -37,6 +37,11 @@
       width: auto;
     }
   }
+
+  .back {
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+  }
 }
 
 .product-image-modal-content {
