Use very light gray

--- a/pages/static/css/_settings.scss
+++ b/pages/static/css/_settings.scss
@@ -75,6 +75,7 @@ $green-dark: #339863;
 $green-light: #6ac07a;
 $gray-dark: #373d4a;
 $gray-light: #727d83;
+$gray-very-light: rgba(0, 0, 0, 0.1);
 $cream: #FFFDF3;
 $off-white : #F8F8FA;
 $emperor: #777777;
