--- a/pages/static/css/_product-index.scss
+++ b/pages/static/css/_product-index.scss
@@ -96,7 +96,7 @@ $card-padding: 1.5em;
   flex-wrap: wrap;
   padding-top: 1em;
   margin-bottom: 1em;
-  border-bottom: 1px solid $yellow-dark;
+  border-bottom: 1px solid $gray-very-light;
   @include breakpoint(medium) {
     padding-bottom: 1em;
   }
