--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -272,7 +272,7 @@ header + #content {
 }
 
 .card {
-  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 0 0 $gray-very-light;
   transform: translate3d(0px, 0px, 0px);
   transition: box-shadow 0.2s cubic-bezier(0, 0.2, 0.4, 1) 0s;
 }
