Add command to import memberships from CSV, update membership form
* Add management command import_members which accepts a path to a CSV
  file containing information on existing members, and reads from the
  file to create member records

* Add checkboxes for the print and digital newsletters to the
  membership signup form

--- a/app/src/membership/templates/membership/membership_application.html
+++ b/app/src/membership/templates/membership/membership_application.html
@@ -73,17 +73,29 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="medium-6 columns">
+				<div class="medium-4 columns">
 					<label for="id_email" class="">
 						Email
 					</label>
 					<input type="email" name="email" id="id_email" maxlength="254">
 				</div>
-				<div class="medium-6 columns">
+				<div class="medium-4 columns">
 					<label for="id_telephone" class="">
 						Telephone
 					</label>
 					<input type="text" name="telephone" id="id_telephone" maxlength="25">
+				</div>
+        <div class="medium-2 columns">
+					<label for="id_print_newsletter" class="">
+						Subscribe to Print Newsletter
+					</label>
+					<input type="checkbox" name="print_newsletter" id="id_print_newsletter" value="print_newsletter">
+				</div>
+        <div class="medium-2 columns">
+					<label for="id_digital_newsletter" class="">
+						Subscribe to Digital Newsletter
+					</label>
+					<input type="checkbox" name="digital_newsletter" id="id_digital_newsletter" value="digital_newsletter">
 				</div>
 			</div>
 			<div class="row">
