--- a/app/src/products/templates/products/product_page.html
+++ b/app/src/products/templates/products/product_page.html
@@ -54,7 +54,7 @@
                         <input type="hidden" name="cancel_return" value="{{ request.site.root_url }}/paypal/cancel"/>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="hidden" name="lc" value="US">
-
+                        <input type="submit" name="submit" value="Add to Cart" class="button add-to-cart">
                     </form>
                 </div>
             {% else %}
